# toondb-python-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  build_native.py  c-code.py  profiling_results.json  pyproject.toml
.github/workflows/: release.yml
benchmarks/: README.md  compare_search_fast.py  competitive_benchmark.py  feature_benchmark.py  micro_benchmark.py  profile_hotpath.py  rag_benchmark.py  real_search_demo.py  run_benchmarks_with_graphs.py  ultimate_showdown.py
benchmarks/results/: benchmark_results.json
scripts/: build_rust_binary.sh
src/sochdb/: __init__.py  database.py  sql_engine.py  vector.py
src/toondb/: __init__.py  context.py  database.py  format.py  graph.py  grpc_client.py  namespace.py  policy.py  routing.py  sql_engine.py  toondb_pb2.py  toondb_pb2_grpc.py
src/toondb/_bin/darwin-arm64/: toondb-bulk  toondb-server
src/toondb/proto/: toondb_pb2.py  toondb_pb2_grpc.py
